--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ model-viewer {
     transform: translateY(-5px);
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
 }
+nav {
+      z-index: 9999;
+}
 .nav-link {
     position: relative;
 }
