--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ model-viewer {
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
 }
 #nav {
-      z-index: 9999;
+      z-index: 99999 !important; 
 }
 .nav-link {
     position: relative;
