--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Base Typography */
 p {
-    font-family: "Roboto Slab", serif;
+    font-family: "Inter", serif;
     font-optical-sizing: auto;
     font-style: normal;
 }
